# jj-manage

./: Cargo.toml  flake.nix  rustfmt.toml
src/: config.rs  forge.rs  get.rs  list.rs  main.rs  repos.rs  resolve.rs  update.rs
