[package]
name = "jj-manage"
version = "0.0.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
futures = "0.3.31"
home = "0.5.11"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt", "time"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"
whoami = "1.5.2"
xdg = "2.5.2"
